#******************************************************************************
# Makefile.am (sequencer64)
#------------------------------------------------------------------------------
##
# \file       	Makefile.am
# \library    	sequencer64 application
# \author     	Chris Ahlstrom
# \date       	2015-09-11
# \update      2015-10-07
# \version    	$Revision$
# \license    	$XPC_SUITE_GPL_LICENSE$
#
# 		This module provides an packaging makefile for the sequencer64
# 		pixmaps.
#
#------------------------------------------------------------------------------

EXTRA_DIST = \
	bus.xpm \
	collapse.xpm \
	copy.xpm \
	down.xpm \
	expand.xpm \
	font_b.xpm \
	font_w.xpm \
	font_y.xpm \
	font_yb.xpm \
	key.xpm \
	learn2.xpm \
	learn.xpm \
	length.xpm \
	loop.xpm \
	menu_empty.xpm \
	menu_full.xpm \
	midi.xpm \
	note_length.xpm \
	perfedit.xpm \
	play2.xpm \
	play.xpm \
	q_rec.xpm \
	quantize.xpm \
	rec.xpm \
	redo.xpm \
	scale.xpm \
	seq24_32.xpm \
	seq24.xpm \
	sequencer24.xpm \
	sequencer24_legacy.xpm \
	sequencer24_square.xpm \
	sequencer64_legacy.xpm \
	sequencer64_square.xpm \
	seq-editor.xpm \
	sequences.xpm \
	snap.xpm \
	song-editor.xpm \
	stop.xpm \
	thru.xpm \
	tools.xpm \
	undo.xpm \
	zoom.xpm

#*****************************************************************************
# Makefile.am (sequencer64)
#-----------------------------------------------------------------------------
# vim: ts=3 sw=3 noet ft=automake
#-----------------------------------------------------------------------------
