#******************************************************************************
# Makefile.am (sequencer64)
#------------------------------------------------------------------------------
##
# \file       	Makefile.am
# \library    	sequencer64 application
# \author     	Chris Ahlstrom
# \date       	2015-09-11
# \update      2016-06-20
# \version    	$Revision$
# \license    	$XPC_SUITE_GPL_LICENSE$
#
# 		This module provides an packaging makefile for the sequencer64
# 		pixmaps.
#
#------------------------------------------------------------------------------

EXTRA_DIST = \
	bus.xpm \
	chord.xpm \
	collapse.xpm \
	copy.xpm \
	cyan_wenfont_yb.xpm \
	cyan_wenfont_y.xpm \
   del.xpm \
	down.xpm \
	expand.xpm \
	font_b.xpm \
	font_w.xpm \
	font_y.xpm \
	font_yb.xpm \
   ins.xpm \
	key.xpm \
	learn2.xpm \
	learn.xpm \
   length_short.xpm \
	length.xpm \
	loop.xpm \
	menu_empty.xpm \
	menu_full.xpm \
	midi.xpm \
	note_length.xpm \
	paia_seq_24x24.xpm \
	pause.xpm \
	perfedit.xpm \
	play2.xpm \
	play.xpm \
	q_rec.xpm \
	quantize.xpm \
	rec.xpm \
	redo.xpm \
	scale.xpm \
	seq24_32.xpm \
	seq24.xpm \
	SEQ64_24x24.xpm \
	seq64_32.xpm \
	seq64.xpm \
	seq-editor.xpm \
	sequencer24.xpm \
	sequencer24_legacy.xpm \
	sequencer24_square.xpm \
	SEQUENCER-64_24x24.xpm \
	sequencer64_legacy.xpm \
	sequencer64_square.xpm \
	seq-editor.xpm \
	sequences.xpm \
	snap.xpm \
	song-editor.xpm \
	stop.xpm \
	thru.xpm \
	tools.xpm \
	undo.xpm \
	wenfont_b.xpm \
	wenfont_w.xpm \
	wenfont_yb.xpm \
	wenfont_y.xpm \
	zoom.xpm

#*****************************************************************************
# Makefile.am (sequencer64)
#-----------------------------------------------------------------------------
# vim: ts=3 sw=3 noet ft=automake
#-----------------------------------------------------------------------------
