#******************************************************************************
# Makefile.am (sequencer64)
#------------------------------------------------------------------------------
##
# \file        Makefile.am
# \library     sequencer64 application
# \author      Chris Ahlstrom
# \date        2015-09-11
# \update      2018-03-08
# \version     $Revision$
# \license     $XPC_SUITE_GPL_LICENSE$
#
#  	This module provides an packaging makefile for the sequencer64
#  	pixmaps.
#
#------------------------------------------------------------------------------

EXTRA_DIST = \
 bus.xpm \
 chord3-inv.xpm \
 chord3.xpm \
 chord.xpm \
 collapse.xpm \
 copy.xpm \
 cyan_wenfont_yb.xpm \
 cyan_wenfont_y.xpm \
 del.xpm \
 down.xpm \
 drum.xpm \
 editor-play.xpm \
 editor-q-rec.xpm \
 editor-rec.xpm \
 editor-thru.xpm \
 expand.xpm \
 follow.xpm \
 font_b.xpm \
 font_w.xpm \
 font_yb.xpm \
 font_y.xpm \
 fruity.xpm \
 ins.xpm \
 jack_black.xpm \
 jack.xpm \
 key.xpm \
 learn2.xpm \
 learn.xpm \
 length_short.xpm \
 length.xpm \
 live_mode.xpm \
 logo.xpm \
 loop.xpm \
 menu_empty.xpm \
 menu_full.xpm \
 menu.xpm \
 midi.xpm \
 muting.xpm \
 note_length.xpm \
 paia_seq_24x24.xpm \
 panic.xpm \
 pause.xpm \
 perfedit.xpm \
 play2.xpm \
 play.xpm \
 q_rec.xpm \
 quantize.xpm \
 rec.xpm \
 redo.xpm \
 route64rwb-32x32.xpm \
 route64rwb-64x64.xpm \
 scale.xpm \
 seq24_32.xpm \
 seq24.xpm \
 SEQ64_24x24.xpm \
 seq64_32.xpm \
 seq64_logo_legacy.xpm \
 seq64_logo.xpm \
 seq64.xpm \
 seq-editor.xpm \
 SEQUENCER-64_24x24.xpm \
 sequencer64_legacy_large.xpm \
 sequencer64_legacy.xpm \
 sequencer64_square_large.xpm \
 sequencer64_square_medium.xpm \
 sequencer64_square_small.xpm \
 sequencer64_square.xpm \
 sequences.xpm \
 seq.xpm \
 snap.xpm \
 song-editor.xpm \
 song_mode.xpm \
 song_rec_off.xpm \
 song_rec_on.xpm \
 song_record.xpm \
 song-snap.xpm \
 stop.xpm \
 tempo_autorecord.xpm \
 tempo_log.xpm \
 tempo_rec_off.xpm \
 tempo_rec_on.xpm \
 tempo_record.xpm \
 thru.xpm \
 tools.xpm \
 transport_follow.xpm \
 transpose.xpm \
 tux.xpm \
 undo.xpm \
 wenfont_b.xpm \
 wenfont_w.xpm \
 wenfont_yb.xpm \
 wenfont_y.xpm \
 zoom.xpm

#*****************************************************************************
# Makefile.am (sequencer64)
#-----------------------------------------------------------------------------
# vim: ts=3 sw=3 noet ft=automake
#-----------------------------------------------------------------------------
